<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">拼图终结者</string>
    <string name="level">等级:</string>
    <string name="level2">等级:</string>
    <string name="selectPictureArea">选择图片区</string>
    <string name="confirm">确定</string>
    <string name="author">作者简介</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="authorInfo">PS</string>
    <string name="aboutInfo">"拼图终结者是PS个人Android版拼图游戏，最终版权归个人所有。
后续将推出一系列其他游戏，敬请期待···！"</string>
    <string name="preview">预览</string>
    <string name="stepNum">步数:</string>
    <string name="time">时间:</string>
    <string name="success">成功</string>
    <string name="play">PLAY</string>
    <string name="rePlay">REPLAY</string>
    <string name="localImage">手机图片拼图</string>
    <string name="originalImage">自带图片拼图</string>
</resources>
