<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.ps.pintu.view">
    <LinearLayout android:id="@id/adLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.adwo.adsdk.AdwoAdView android:id="@id/ad" android:layout_width="fill_parent" android:layout_height="wrap_content" app:backgroundColor="#ff000000" app:primaryTextColor="#ffffffff" app:secondaryTextColor="#ffcccccc" app:isTesting="false" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/round_rect_shape" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="3.0px">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="6.0px">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/level" style="@style/font_20_white_bold" />
            <Spinner android:id="@id/main_level_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@id/localOrOriginal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/localImage" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
            <TextView android:background="@color/slateGray" android:paddingLeft="6.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/selectPictureArea" style="@style/font_20_white_bold" />
            <GridView android:gravity="center" android:id="@id/main_picture_gridView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="6.0dip" android:horizontalSpacing="5.0dip" android:verticalSpacing="5.0dip" android:stretchMode="columnWidth" android:columnWidth="90.0dip" android:numColumns="3" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="6.0">
            <Button android:layout_gravity="center" android:id="@id/main_confirm_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm" style="@style/btn_font_17_black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>