<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.ps.pintu.view">
    <LinearLayout android:id="@id/adLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.adwo.adsdk.AdwoAdView android:id="@id/ad" android:layout_width="fill_parent" android:layout_height="wrap_content" app:backgroundColor="#ff000000" app:primaryTextColor="#ffffffff" app:secondaryTextColor="#ffcccccc" app:isTesting="false" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/jigsaw_preview_LinearLayout" android:background="@drawable/round_rect_shape" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0px" android:layout_marginTop="6.0px" android:layout_marginBottom="6.0px">
            <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preview" style="@style/font_20_white_bold" />
            <ImageView android:id="@id/jigsaw_preview_imgview" android:paddingLeft="3.0px" android:paddingRight="3.0px" android:paddingBottom="4.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/pingtu_6" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/jigsaw_preview_LinearLayout">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/level2" style="@style/font_20_white_bold" />
                <TextView android:textSize="17.0dip" android:id="@id/jigsaw_level_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2X2" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stepNum" style="@style/font_20_white_bold" />
                <TextView android:textSize="17.0dip" android:textColor="@color/red" android:id="@id/jigsaw_stepNum_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time" style="@style/font_20_white_bold" />
                <TextView android:textSize="17.0dip" android:textColor="@color/red" android:id="@id/jigsaw_time_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10:00" />
            </LinearLayout>
            <Button android:textSize="14.0dip" android:id="@id/jigsaw_start_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.ps.pintu.model.widgets.JigsawView android:id="@id/main_JigsawView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="12.0px" />
    </LinearLayout>
</LinearLayout>